# geom-core

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PRD.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
.github/workflows/: ci.yml
bindings/python/: PyBindEntry.cpp
bindings/wasm/: WasmCAD.cpp  WasmEntry.cpp
docs/: ZERO_LAG_ARCHITECTURE.md
include/geom-core/: Analyzer.hpp  Mesh.hpp  Spatial.hpp  Vector3.hpp
include/geom-core/cad/: Engine.hpp  ShapeRegistry.hpp  Types.hpp
scripts/: build_python.sh  build_wasm.sh  run_tests.sh
src/: Analyzer.cpp  BRepLoader.cpp  BRepLoader.hpp  Mesh.cpp  Spatial.cpp
src/cad/: BooleanOps.cpp  Engine.cpp  Features.cpp  OCCTShape.hpp  Primitives.cpp  ShapeRegistry.cpp  Transforms.cpp
src/io/: STLReader.cpp  STLWriter.cpp
src/typescript/: index.ts
src/typescript/bindings/: GeometryEngine.ts  types.ts
src/typescript/sdk/: GeomCoreSDK.ts
tests/: test_auto_orient.py  test_basic.py  test_mesh.py  test_printability.py  test_step.py
viewer/: README.md  app.js  index.html  style.css
web_test/: README.md  index.html
